2.0: Complete Java port, Fabric + NeoForge, branch-based versioning, Kotlin DSL Gradle, Stonecutter removal, and 1.20.1 targetting.